[tool.poetry]
name = "jess-ai"
version = "0.1.0"
description = "Jess AI WhatsApp Assistant"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.19"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"
sentence-transformers = "^2.2.2"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
